--- a/models/model_sentiment0/model_config.json
+++ b/models/model_sentiment0/model_config.json
@@ -1,23 +1,22 @@
 {
   "data_set": {
-    "file_path": "tmp/training.1600000.processed.noemoticon.csv",
+    "file_path": "tmp/data_sets/training.1600000.processed.noemoticon.csv",
     "trunc_type": "post",
     "padding_type": "post",
     "oov_tok": "<OOV>"
   },
   "embeddings": {
-    "embeddings_file_path": "tmp/glove.6B(1)/glove.6B.100d.txt",
-    "embedding_dim": 100
+    "embeddings_file_path": "tmp/embeddings/glove.6B(1)/glove.6B.200d.txt",
+    "embedding_dim": 200
   },
   "model":{
-    "name": "simple_mnist_model.SimpleMnistModel",
     "learning_rate": 0.001,
     "optimizer": "adam"
   },
   "training":{
-    "num_epochs": 1,
+    "num_epochs": 50,
     "validation_split":0.1,
-    "max_sentence_length": 32,
+    "max_sentence_length": 16,
     "verbose_training": true
   }
 }
