--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ python = "^3.8"
 spacy = "^2.3.4"
 dotmap = "^1.3.23"
 matplotlib = "^3.3.3"
-numpy = "^1.19.4"
-Keras = "^2.4.3"
+tensorflow = "^2.3.1"
+pandas = "^1.1.4"
 
 [tool.poetry.dev-dependencies]
 
